--- a/assets/scss/global/global.scss
+++ b/assets/scss/global/global.scss
@@ -1,4 +1,4 @@
-@use "/assets/scss/global/elements";
-@use "/assets/scss/global/fonts";
-@use "/assets/scss/global/normalize";
-@use "/assets/scss/global/variables";
+@use "elements.scss";
+@use "normalize.scss";
+@use "variables.scss";
+@use "fonts.scss";
